--- a/HromadskyiPatrul/Base.lproj/Main.storyboard
+++ b/HromadskyiPatrul/Base.lproj/Main.storyboard
@@ -197,7 +197,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="B1W-PM-jbV" userLabel="Photos Collection View">
+                            <collectionView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="B1W-PM-jbV" userLabel="Photos Collection View">
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="4" minimumInteritemSpacing="4" id="xfD-Ca-Wh2">
@@ -244,6 +244,7 @@
                                                         <constraint firstAttribute="width" constant="30" id="6dB-uF-and"/>
                                                         <constraint firstAttribute="height" constant="30" id="piD-cO-e7M"/>
                                                     </constraints>
+                                                    <color key="color" red="0.015686274509803921" green="0.46666666666666667" blue="0.74117647058823533" alpha="1" colorSpace="calibratedRGB"/>
                                                 </activityIndicatorView>
                                             </subviews>
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
@@ -298,11 +299,12 @@
                                 <rect key="frame" x="260" y="509" width="20" height="18"/>
                             </imageView>
                             <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" animating="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="HoH-VM-nVs">
-                                <rect key="frame" x="135" y="303" width="50" height="50"/>
+                                <rect key="frame" x="135" y="291" width="50" height="50"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="50" id="EzU-dd-Iew"/>
                                     <constraint firstAttribute="height" constant="50" id="hKj-kn-S4Z"/>
                                 </constraints>
+                                <color key="color" red="0.015686274509803921" green="0.46666666666666667" blue="0.74117647058823533" alpha="1" colorSpace="calibratedRGB"/>
                             </activityIndicatorView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -315,7 +317,7 @@
                             <constraint firstAttribute="centerX" secondItem="HoH-VM-nVs" secondAttribute="centerX" id="fC5-vl-ZNf"/>
                             <constraint firstItem="Fjg-f2-VNU" firstAttribute="centerX" secondItem="5oC-zk-fjR" secondAttribute="centerX" id="g1S-cf-rAX"/>
                             <constraint firstItem="B1W-PM-jbV" firstAttribute="top" secondItem="3GM-sC-wFF" secondAttribute="top" id="kce-MC-Qe1"/>
-                            <constraint firstAttribute="centerY" secondItem="HoH-VM-nVs" secondAttribute="centerY" constant="-44" id="vUU-AN-7eD"/>
+                            <constraint firstAttribute="centerY" secondItem="HoH-VM-nVs" secondAttribute="centerY" constant="-32" id="vUU-AN-7eD"/>
                             <constraint firstAttribute="trailing" secondItem="B1W-PM-jbV" secondAttribute="trailing" id="yIz-sj-qgR"/>
                         </constraints>
                     </view>
@@ -330,14 +332,94 @@
                     </navigationItem>
                     <simulatedStatusBarMetrics key="simulatedStatusBarMetrics" statusBarStyle="lightContent"/>
                     <connections>
+                        <outlet property="cameraButton" destination="5oC-zk-fjR" id="9k1-Fr-lsp"/>
                         <outlet property="photosCollectionView" destination="B1W-PM-jbV" id="R9u-XL-KnP"/>
-                        <outlet property="uploadActivityIndicator" destination="HoH-VM-nVs" id="YLY-aR-nIY"/>
+                        <outlet property="uploadActivityIndicator" destination="HoH-VM-nVs" id="Tcn-WN-190"/>
                         <outlet property="userNameBarButton" destination="GMb-0b-1A0" id="tjh-vp-55r"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Fq6-3R-0JT" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1537" y="391"/>
+        </scene>
+        <!--Photo Preview View Controller-->
+        <scene sceneID="gzu-SY-AEA">
+            <objects>
+                <viewController storyboardIdentifier="PhotoPreviewVC" modalTransitionStyle="crossDissolve" id="tlt-8Y-UKs" customClass="HRPPhotoPreviewViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="PSo-Qi-SSy"/>
+                        <viewControllerLayoutGuide type="bottom" id="Z8O-wC-WRe"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="o7y-bL-j3b">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view autoresizesSubviews="NO" opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="OtK-7h-2mt" userLabel="Status View">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="20"/>
+                                <color key="backgroundColor" red="0.015686274509803921" green="0.46666666666666667" blue="0.74117647058823533" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="20" id="Ksn-FL-0i9"/>
+                                </constraints>
+                            </view>
+                            <imageView autoresizesSubviews="NO" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="L27-gU-LYV" userLabel="Photo Image View">
+                                <rect key="frame" x="0.0" y="20" width="320" height="548"/>
+                            </imageView>
+                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" animating="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="GEx-LE-PLc">
+                                <rect key="frame" x="135" y="259" width="50" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="0VN-76-Cje"/>
+                                    <constraint firstAttribute="width" constant="50" id="YN0-Q9-dfH"/>
+                                </constraints>
+                                <color key="color" red="0.015686274509803921" green="0.46666666666666667" blue="0.74117647058823533" alpha="1" colorSpace="calibratedRGB"/>
+                            </activityIndicatorView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="right" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RHF-Dg-70s" userLabel="Cancel Button">
+                                <rect key="frame" x="205" y="20" width="100" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="1gV-zz-x8h"/>
+                                    <constraint firstAttribute="width" constant="100" id="ePI-MZ-kJA"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="15"/>
+                                <state key="normal" title="Button">
+                                    <color key="titleColor" red="0.015686274509803921" green="0.46666666666666667" blue="0.74117647058823533" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="actionCancelButtonTap:" destination="tlt-8Y-UKs" eventType="touchUpInside" id="fF5-Tr-bph"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="OtK-7h-2mt" firstAttribute="leading" secondItem="o7y-bL-j3b" secondAttribute="leading" id="Frr-aY-dhv"/>
+                            <constraint firstAttribute="trailing" secondItem="OtK-7h-2mt" secondAttribute="trailing" id="Jw8-DW-O2P"/>
+                            <constraint firstAttribute="bottom" secondItem="L27-gU-LYV" secondAttribute="bottom" id="S2b-4s-q7e"/>
+                            <constraint firstAttribute="centerY" secondItem="GEx-LE-PLc" secondAttribute="centerY" id="S4K-X6-CND"/>
+                            <constraint firstItem="L27-gU-LYV" firstAttribute="top" secondItem="OtK-7h-2mt" secondAttribute="bottom" id="YZ9-5s-2Xt"/>
+                            <constraint firstItem="RHF-Dg-70s" firstAttribute="top" secondItem="OtK-7h-2mt" secondAttribute="bottom" id="eRD-2G-pwx"/>
+                            <constraint firstItem="L27-gU-LYV" firstAttribute="leading" secondItem="o7y-bL-j3b" secondAttribute="leading" id="gHk-tS-zp4"/>
+                            <constraint firstAttribute="trailing" secondItem="RHF-Dg-70s" secondAttribute="trailing" constant="15" id="iV5-Bm-xw6"/>
+                            <constraint firstAttribute="centerX" secondItem="GEx-LE-PLc" secondAttribute="centerX" id="iah-l8-7V6"/>
+                            <constraint firstItem="OtK-7h-2mt" firstAttribute="top" secondItem="o7y-bL-j3b" secondAttribute="top" id="q04-VR-MRH"/>
+                            <constraint firstAttribute="trailing" secondItem="L27-gU-LYV" secondAttribute="trailing" id="zMb-Tk-77M"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="PDp-B9-AgP">
+                        <barButtonItem key="rightBarButtonItem" systemItem="cancel" id="PVu-8f-yWb">
+                            <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            <connections>
+                                <action selector="actionCancelBarButtonTap:" destination="tlt-8Y-UKs" id="mcn-Nt-Wsq"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="activityIndicator" destination="GEx-LE-PLc" id="7zl-dF-HGO"/>
+                        <outlet property="cancelButton" destination="RHF-Dg-70s" id="4Qm-Bu-mql"/>
+                        <outlet property="photoImageView" destination="L27-gU-LYV" id="iMN-3S-Wb7"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Xjb-S7-r9y" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1537" y="1090"/>
         </scene>
         <!--Settings View Controller-->
         <scene sceneID="ETM-kh-4fd">
