--- a/HromadskyiPatrul/Base.lproj/Main.storyboard
+++ b/HromadskyiPatrul/Base.lproj/Main.storyboard
@@ -214,7 +214,7 @@
                                             <rect key="frame" x="0.0" y="0.0" width="158" height="158"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView clearsContextBeforeDrawing="NO" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon-no-image" translatesAutoresizingMaskIntoConstraints="NO" id="g2J-pk-qCv" userLabel="Photo Image View">
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="g2J-pk-qCv" userLabel="Photo Image View">
                                                     <rect key="frame" x="0.0" y="0.0" width="158" height="158"/>
                                                 </imageView>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="shadow" translatesAutoresizingMaskIntoConstraints="NO" id="OaA-9P-2qT" userLabel="Shadow Image View">
@@ -361,9 +361,6 @@
                                     <constraint firstAttribute="height" constant="20" id="Ksn-FL-0i9"/>
                                 </constraints>
                             </view>
-                            <imageView autoresizesSubviews="NO" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="L27-gU-LYV" userLabel="Photo Image View">
-                                <rect key="frame" x="0.0" y="20" width="320" height="548"/>
-                            </imageView>
                             <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" animating="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="GEx-LE-PLc">
                                 <rect key="frame" x="135" y="259" width="50" height="50"/>
                                 <constraints>
@@ -372,7 +369,7 @@
                                 </constraints>
                                 <color key="color" red="0.015686274509803921" green="0.46666666666666667" blue="0.74117647058823533" alpha="1" colorSpace="calibratedRGB"/>
                             </activityIndicatorView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="right" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RHF-Dg-70s" userLabel="Cancel Button">
+                            <button autoresizesSubviews="NO" opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" contentHorizontalAlignment="right" contentVerticalAlignment="center" buttonType="roundedRect" adjustsImageWhenDisabled="NO" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RHF-Dg-70s" userLabel="Cancel Button">
                                 <rect key="frame" x="205" y="20" width="100" height="44"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="44" id="1gV-zz-x8h"/>
@@ -387,6 +384,9 @@
                                     <action selector="actionCancelButtonTap:" destination="tlt-8Y-UKs" eventType="touchUpInside" id="fF5-Tr-bph"/>
                                 </connections>
                             </button>
+                            <imageView clearsContextBeforeDrawing="NO" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="L27-gU-LYV" userLabel="Photo Image View">
+                                <rect key="frame" x="0.0" y="20" width="320" height="548"/>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
@@ -394,10 +394,10 @@
                             <constraint firstAttribute="trailing" secondItem="OtK-7h-2mt" secondAttribute="trailing" id="Jw8-DW-O2P"/>
                             <constraint firstAttribute="bottom" secondItem="L27-gU-LYV" secondAttribute="bottom" id="S2b-4s-q7e"/>
                             <constraint firstAttribute="centerY" secondItem="GEx-LE-PLc" secondAttribute="centerY" id="S4K-X6-CND"/>
+                            <constraint firstAttribute="trailing" secondItem="RHF-Dg-70s" secondAttribute="trailing" constant="15" id="Sc7-JR-n5n"/>
                             <constraint firstItem="L27-gU-LYV" firstAttribute="top" secondItem="OtK-7h-2mt" secondAttribute="bottom" id="YZ9-5s-2Xt"/>
                             <constraint firstItem="RHF-Dg-70s" firstAttribute="top" secondItem="OtK-7h-2mt" secondAttribute="bottom" id="eRD-2G-pwx"/>
                             <constraint firstItem="L27-gU-LYV" firstAttribute="leading" secondItem="o7y-bL-j3b" secondAttribute="leading" id="gHk-tS-zp4"/>
-                            <constraint firstAttribute="trailing" secondItem="RHF-Dg-70s" secondAttribute="trailing" constant="15" id="iV5-Bm-xw6"/>
                             <constraint firstAttribute="centerX" secondItem="GEx-LE-PLc" secondAttribute="centerX" id="iah-l8-7V6"/>
                             <constraint firstItem="OtK-7h-2mt" firstAttribute="top" secondItem="o7y-bL-j3b" secondAttribute="top" id="q04-VR-MRH"/>
                             <constraint firstAttribute="trailing" secondItem="L27-gU-LYV" secondAttribute="trailing" id="zMb-Tk-77M"/>
@@ -420,6 +420,102 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Xjb-S7-r9y" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1537" y="1090"/>
+        </scene>
+        <!--Video Record View Controller-->
+        <scene sceneID="ymh-0U-nrV">
+            <objects>
+                <viewController storyboardIdentifier="VideoRecordVC" id="nnf-vR-Oke" customClass="HRPVideoRecordViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="FGf-M5-a3S"/>
+                        <viewControllerLayoutGuide type="bottom" id="LmS-0N-oYH"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Lh8-SN-AYI">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view autoresizesSubviews="NO" opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5Ip-33-TZr" userLabel="Status View">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="20"/>
+                                <color key="backgroundColor" red="0.015686274510000001" green="0.46666666670000001" blue="0.74117647060000003" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="20" id="HYm-yD-oVl"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="UjC-Ec-Nht" userLabel="Video View">
+                                <rect key="frame" x="0.0" y="20" width="320" height="548"/>
+                                <subviews>
+                                    <button contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4cb-ys-WhI" userLabel="Control Button" customClass="HRPButton">
+                                        <rect key="frame" x="117" y="460" width="86" height="86"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="86" id="F2C-z8-w97"/>
+                                            <constraint firstAttribute="width" constant="86" id="wja-lO-FJ7"/>
+                                        </constraints>
+                                        <state key="normal">
+                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="color" keyPath="fillColor">
+                                                <color key="value" red="0.019607843137254902" green="0.66274509803921566" blue="0.95686274509803926" alpha="0.80000000000000004" colorSpace="calibratedRGB"/>
+                                            </userDefinedRuntimeAttribute>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                                <real key="value" value="43"/>
+                                            </userDefinedRuntimeAttribute>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
+                                                <real key="value" value="11"/>
+                                            </userDefinedRuntimeAttribute>
+                                            <userDefinedRuntimeAttribute type="color" keyPath="borderColor">
+                                                <color key="value" red="1" green="0.2784313725" blue="0.30588235289999999" alpha="0.80000000000000004" colorSpace="calibratedRGB"/>
+                                            </userDefinedRuntimeAttribute>
+                                        </userDefinedRuntimeAttributes>
+                                        <connections>
+                                            <action selector="actionControlButtonTap:" destination="nnf-vR-Oke" eventType="touchUpInside" id="Osm-Mx-7T9"/>
+                                        </connections>
+                                    </button>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DxB-Zj-qIu" userLabel="Control Label">
+                                        <rect key="frame" x="138" y="434" width="45" height="21"/>
+                                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="18"/>
+                                        <color key="textColor" red="0.015686274509803921" green="0.46666666666666667" blue="0.74117647058823533" alpha="0.80000000000000004" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="00:00:00" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BzL-3N-W4p" userLabel="Timer Label">
+                                        <rect key="frame" x="213" y="492" width="97" height="21"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <color key="textColor" red="0.015686274509803921" green="0.46666666666666667" blue="0.74117647058823533" alpha="0.80000000000000004" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" red="0.83921568629999999" green="0.84313725490000002" blue="0.84313725490000002" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="centerX" secondItem="DxB-Zj-qIu" secondAttribute="centerX" id="Aau-nq-zM7"/>
+                                    <constraint firstAttribute="centerX" secondItem="4cb-ys-WhI" secondAttribute="centerX" id="N3J-OG-53q"/>
+                                    <constraint firstAttribute="trailing" secondItem="BzL-3N-W4p" secondAttribute="trailing" constant="10" id="NSZ-6X-Qod"/>
+                                    <constraint firstItem="BzL-3N-W4p" firstAttribute="leading" secondItem="4cb-ys-WhI" secondAttribute="trailing" constant="10" id="Ubi-i3-lwT"/>
+                                    <constraint firstItem="4cb-ys-WhI" firstAttribute="top" secondItem="DxB-Zj-qIu" secondAttribute="bottom" constant="5" id="chW-mF-TXH"/>
+                                    <constraint firstItem="BzL-3N-W4p" firstAttribute="centerY" secondItem="4cb-ys-WhI" secondAttribute="centerY" id="miA-94-EI3"/>
+                                    <constraint firstAttribute="bottom" secondItem="4cb-ys-WhI" secondAttribute="bottom" constant="2" id="uzP-cB-myO"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="5Ip-33-TZr" firstAttribute="top" secondItem="Lh8-SN-AYI" secondAttribute="top" id="5AM-qF-dZ0"/>
+                            <constraint firstItem="5Ip-33-TZr" firstAttribute="leading" secondItem="Lh8-SN-AYI" secondAttribute="leading" id="6bd-Jv-zj2"/>
+                            <constraint firstItem="LmS-0N-oYH" firstAttribute="top" secondItem="UjC-Ec-Nht" secondAttribute="bottom" id="FXj-1C-eCt"/>
+                            <constraint firstItem="UjC-Ec-Nht" firstAttribute="leading" secondItem="Lh8-SN-AYI" secondAttribute="leading" id="Fb4-Qg-LDU"/>
+                            <constraint firstItem="UjC-Ec-Nht" firstAttribute="top" secondItem="5Ip-33-TZr" secondAttribute="bottom" id="YVf-N2-J5D"/>
+                            <constraint firstAttribute="trailing" secondItem="5Ip-33-TZr" secondAttribute="trailing" id="cTt-E9-CJx"/>
+                            <constraint firstAttribute="trailing" secondItem="UjC-Ec-Nht" secondAttribute="trailing" id="px9-YN-fxM"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="controlButton" destination="4cb-ys-WhI" id="ORL-DO-xlm"/>
+                        <outlet property="controlLabel" destination="DxB-Zj-qIu" id="6zR-4i-3bI"/>
+                        <outlet property="timerLabel" destination="BzL-3N-W4p" id="sIe-Gk-r1J"/>
+                        <outlet property="videoView" destination="UjC-Ec-Nht" id="bSc-E3-9PA"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="qxG-qD-MMO" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2053" y="1090"/>
         </scene>
         <!--Settings View Controller-->
         <scene sceneID="ETM-kh-4fd">
@@ -539,7 +635,6 @@
         <image name="icon-camera" width="20" height="18"/>
         <image name="icon-camera-selected" width="20" height="18"/>
         <image name="icon-logo" width="212" height="212"/>
-        <image name="icon-no-image" width="100" height="100"/>
         <image name="icon-settings" width="20" height="20"/>
         <image name="icon-stfalcon" width="19" height="18"/>
         <image name="shadow" width="100" height="100"/>
